# skyrimse-backported-esl-support

./: CMakeLists.txt  CMakePresets.json  CMakeUserEnvVars.json  Make-Release.ps1  README.md  vcpkg.json
source/: CMakeLists.txt  DllMain.cpp  PCH.h  Plugin.cpp
source/Impl/: ContainerHooks.cpp  ContainerHooks.h  LoaderHooks.cpp  LoaderHooks.h  PapyrusImpl.cpp  PapyrusImpl.h
source/RE/: Shims.h
vcpkg-ports/commonlibsse-ng-flatrim/: portfile.cmake  vcpkg.json
